<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My first app</string>
    <string name="student_info">Student: Parshikov\Group: 3.2ISiP-2</string>
    <string name="menu_description">Menu</string>
    <string name="avatar_description">Author avatar</string>
    <string name="like_description">Favorite</string>
    <string name="share_description">Share</string>
    <string name="views_description">Viewers</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What`s new?</string>
    <string name="cancel_edit_hint">Edit</string>
    <string name="cancel_edit">Cancel</string>
    <string name="save_post">Upload</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post_edit_title">Edit post</string>
    <string name="error_empty_content">Text can`t be empty</string>
    <string name="play_video">Play video</string>
    <string name="open_external">Open in external app</string>
    <string name="error_no_video_app">Net coro4e app dla vieo</string>
    <string name="error_cannot_open_video">Video ne otcrivaetsa</string>
    <string name="share_post_via">Share through</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_removed">Post removed</string>

</resources>
